tests/paczka1/fuzzy1/98393268.err
Error in line 10: f2Z01Dv A768 190,5
Error in line 15: nESHfLCZ0 S705 371,5
Error in line 21: f2Z01Dv S705 115,4
Error in line 22: f2Z01Dv A768 87,3
Error in line 16: nESHfLCZ0 S34 22,1
